# ba_agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/graph/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/routers/: project_settings.py  session.py  teamwork.py
app/schemas/: api.py
app/services/: github.py
docs/: n8n-orchestrator-migration.md
scripts/: discover_teamwork.py  test_teamwork_write.py
